fix mobile navs spacing issues

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -136,14 +136,10 @@ a:hover {
     box-shadow: var(--box-shadow);
 }
 
-.mobile-nav__left {
-    width: 49%;
-    padding: 1rem 1.4rem;
-}
-
+.mobile-nav__left,
 .mobile-nav__right {
     width: 49%;
-    padding: 1rem 1.4rem;
+    padding: .4rem 1.4rem;
 }
 
 .mobile-nav__list {
@@ -152,9 +148,14 @@ a:hover {
 }
 
 .mobile-nav__list-item {
-    font-size: var(--fs-p-big-sm);
+    font-size: var(--fs-p-default-sm);
     font-weight: 700;
     margin-bottom: 1.65rem;
+    line-height: 30px;
+}
+
+.mobile-nav__list-item:last-of-type {
+    margin-bottom: 0;
 }
 
 .dropdown-item {
@@ -164,6 +165,6 @@ a:hover {
 }
 
 .arrow-down-icon {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
